--- a/index.html
+++ b/index.html
@@ -16,11 +16,20 @@
         a { color: blue; }
         a:visited { color: purple; }
         ul { line-height: 1.4; }
+        .headshot {
+            float: right;
+            max-width: 220px;
+            border-radius: 5px;
+            margin: 0 0 20px 20px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
     </style>
 </head>
 <body>
 
 <h1>Kyle E. Mathewson, PhD</h1>
+
+<img src="images/headshot.jpg" alt="Kyle Mathewson" class="headshot">
 
 <p><strong>Associate Professor, Faculty of Science - Psychology</strong><br>
 <strong>Director, Attention Perception and Performance Lab (APPLab)</strong><br>
@@ -83,7 +92,7 @@ LinkedIn: <a href="https://www.linkedin.com/in/ky-mathewson-856279124/" target="
     <li><a href="https://github.com/kylemath/webcamHR" target="_blank">webcamHR</a> - P5.js webcam HR</li>
     <li><a href="https://github.com/kylemath/matlab_video_hr" target="_blank">matlab_video_hr</a> - GitHub repository</li>
     <li><a href="https://github.com/kylemath/Mathewson2009" target="_blank">Mathewson2009</a> - Phase analysis from Mathewson 2009</li>
-    <li><a href="https://github.com/kylemath/HNN-AEF" target="_blank">HNN-AEF</a> - Data and code to replicate the main findings associated with the manuscript “Neural Mechanisms Underlying Human Auditory Evoked Responses Revealed by Human Neocortical Neurosolver”.</li>
+    <li><a href="https://github.com/kylemath/HNN-AEF" target="_blank">HNN-AEF</a> - Data and code to replicate the main findings associated with the manuscript "Neural Mechanisms Underlying Human Auditory Evoked Responses Revealed by Human Neocortical Neurosolver".</li>
     <li><a href="https://github.com/kylemath/faceoff" target="_blank">faceoff</a> - Latent GAN State Brain Surfing</li>
     <li><a href="https://github.com/kylemath/gmailPower" target="_blank">gmailPower</a> - Power User for Gmail</li>
     <li><a href="https://github.com/kylemath/WhisperingPines" target="_blank">WhisperingPines</a> - Webcam Responsive AudioVisual Art</li>
