deploy: f9b9c83d30faf40ac047fbe45ba927a6a3c3ca5b

--- a/index.html
+++ b/index.html
@@ -16,11 +16,20 @@
         a { color: blue; }
         a:visited { color: purple; }
         ul { line-height: 1.4; }
+        .headshot {
+            float: right;
+            max-width: 220px;
+            border-radius: 5px;
+            margin: 0 0 20px 20px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
     </style>
 </head>
 <body>
 
 <h1>Kyle E. Mathewson, PhD</h1>
+
+<img src="images/headshot.jpg" alt="Kyle Mathewson" class="headshot">
 
 <p><strong>Associate Professor, Faculty of Science - Psychology</strong><br>
 <strong>Director, Attention Perception and Performance Lab (APPLab)</strong><br>
