--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ LinkedIn: <a href="https://www.linkedin.com/in/ky-mathewson-856279124/" target="
 <hr>
 
 <h2 id="publications">Recent Publications</h2>
-<ul>
+<ol reversed>
     <li><a href="https://scholar.google.com/scholar?cluster=9755940777265375331&hl=en&oi=scholarr" target="_blank">Combining the Los Angeles Motor Scale and the Muse Portable Electroencephalography System Improves the Accuracy of Large Vessel Occlusion Detection in Acute Stroke Syndrome.</a> - Mahesh Kate et al. (2025)</li>
     <li><a href="https://www.ahajournals.org/doi/abs/10.1161/str.56.suppl_1.TMP30" target="_blank">Abstract TMP30: Combining the Los Angeles Motor Scale and the Muse Portable Electroencephalography System Improves the Accuracy of Large Vessel Occlusion Detection in Acute Stroke Syndrome.</a> - Mahesh Kate et al. (2025)</li>
     <li><a href="https://www.sciencedirect.com/science/article/pii/S1052305724004762" target="_blank">Quantitative electroencephalography to assess post-stroke functional disability: a systematic review and meta-analysis</a> - Idha Sood et al. (2024)</li>
@@ -239,7 +239,7 @@ LinkedIn: <a href="https://www.linkedin.com/in/ky-mathewson-856279124/" target="
     <li><a href="https://scholar.google.com/scholar?cluster=5981547760986630717&hl=en&oi=scholarr" target="_blank">The detrimental effects of working memory load on a sustained attention task: The elimination of a cueing effect with distraction</a> - Kyle Mathewson et al. (2007)</li>
     <li><a href="https://scholar.google.com/scholar?cluster=15957506658455966719&hl=en&oi=scholarr" target="_blank">Sequence learning and medial-front cortex: External versus internal error evaluation</a> - Olav Krigolson et al. (2007)</li>
     <li><a href="https://scholar.google.com/scholar?cluster=16247280243781344186&hl=en&oi=scholarr" target="_blank">The role of medial-frontal cortex in sequence learning</a> - Olave E Krigolson et al. (2006)</li>
-</ul>
+</ol>
 
 <hr>
 
