updated scholar search to weekly

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ LinkedIn: <a href="https://www.linkedin.com/in/ky-mathewson-856279124/" target="
     <li><a href="https://www.science.org/doi/abs/10.1126/science.1250169" target="_blank">Soft microfluidic assemblies of sensors, circuits, and radios for the skin</a> - Sheng Xu* et al. (2014)</li>
     <li><a href="https://www.nature.com/articles/ncomms5779" target="_blank">Rugged and breathable forms of stretchable electronics with adherent composite substrates for transcutaneous monitoring</a> - Kyung-In Jang et al. (2014)</li>
     <li><a href="https://direct.mit.edu/jocn/article-abstract/26/10/2400/28194" target="_blank">Dynamics of Alpha Control: Preparatory Suppression of Posterior Alpha Oscillations by Frontal Modulators Revealed with Combined EEG and Event-related Optical Signal</a> - Kyle E Mathewson et al. (2014)</li>
-    <li><a href="https://journals.sagepub.com/doi/abs/10.1177/0956797614549774" target="_blank">Providing views of the driving scene to drivers' conversation partners mitigates cell-phone-related distraction</a> - John G Gaspar et al. (2014)</li>
+    <li><a href="https://journals.sagepub.com/doi/abs/10.1177/0956797614549774" target="_blank">Providing views of the driving scene to drivers’ conversation partners mitigates cell-phone-related distraction</a> - John G Gaspar et al. (2014)</li>
     <li><a href="https://arvojournals.org/article.aspx?articleid=2144402" target="_blank">Amelioration of the distracting effect of cellphone driving</a> - Whitney N Street et al. (2014)</li>
     <li><a href="https://iovs.arvojournals.org/article.aspx?articleid=2144508" target="_blank">Keep your mind on the road: Predicting mind-wandering while driving using classification of pre-probe oscillatory brain activity and driving performance</a> - Jibo He et al. (2014)</li>
     <li><a href="https://jov.arvojournals.org/article.aspx?articleid=2144249" target="_blank">Not all probes are created equal: Suppressed probes presented during binocular rivalry draw attention to the suppressed image</a> - Brian A Metzger et al. (2014)</li>
@@ -243,7 +243,6 @@ LinkedIn: <a href="https://www.linkedin.com/in/ky-mathewson-856279124/" target="
     <li><a href="https://scholar.google.com/scholar?cluster=5981547760986630717&hl=en&oi=scholarr" target="_blank">The detrimental effects of working memory load on a sustained attention task: The elimination of a cueing effect with distraction</a> - Kyle Mathewson et al. (2007)</li>
     <li><a href="https://scholar.google.com/scholar?cluster=15957506658455966719&hl=en&oi=scholarr" target="_blank">Sequence learning and medial-front cortex: External versus internal error evaluation</a> - Olav Krigolson et al. (2007)</li>
     <li><a href="https://scholar.google.com/scholar?cluster=16247280243781344186&hl=en&oi=scholarr" target="_blank">The role of medial-frontal cortex in sequence learning</a> - Olave E Krigolson et al. (2006)</li>
-
 </ol>
 
 <hr>
