added webdev experience

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ LinkedIn: <a href="https://www.linkedin.com/in/ky-mathewson-856279124/" target="
 <ul>
     <li><a href="#projects">Recent Projects</a></li>
     <li><a href="#contributor-projects">Contributor Projects</a></li>
+    <li><a href="#web-development">Web Development & Interactive Projects</a></li>
     <li><a href="#publications">Recent Publications</a></li>
     <li><a href="#news-mentions">In the News</a></li>
     <li><a href="#research">Research</a></li>
@@ -135,6 +136,25 @@ LinkedIn: <a href="https://www.linkedin.com/in/ky-mathewson-856279124/" target="
     <li><a href="https://github.com/kylemath/EEG-Classification" target="_blank">EEG-Classification</a> - This project was a joint effort with the neurology labs at UNL and UCD Anschutz to use deep learning to classify EEG data. (18 commits ahead)</li>
     <li><a href="https://github.com/kylemath/face2face-demo" target="_blank">face2face-demo</a> - pix2pix demo that learns from facial landmarks and translates this into a face (1 commits ahead)</li>
     <li><a href="https://github.com/kylemath/Muse-LSL-Matlab-Tools" target="_blank">Muse-LSL-Matlab-Tools</a> - chadcwilliams.weebly.com/muse (9 commits ahead)</li>
+</ul>
+
+<hr>
+
+<h2 id="web-development">Web Development & Interactive Projects</h2>
+<p>Interactive web applications and digital experiences developed using modern web technologies including JavaScript, P5.js, WebGL, and Web APIs.</p>
+<ul>
+    <li><a href="https://eegedu.com/" target="_blank">EEGEdu</a> - Interactive Brain Playground: Browser-based tutorials for learning EEG and neuroscience using Web Bluetooth and Muse headsets</li>
+    <li><a href="https://p5eegedu.com/" target="_blank">p5.eegedu</a> - Live coding environment combining P5.js creative coding with real-time brain activity input via Bluetooth EEG</li>
+    <li><a href="https://p5eegedu.art/" target="_blank">p5.eegedu.art</a> - Creative brain-art gallery showcasing interactive visualizations driven by neural activity</li>
+    <li><a href="https://kylemath.github.io/IllumiStack/" target="_blank">IllumiStack</a> - 3D printing web app for creating multi-color prints using stacked layers and color mixing algorithms</li>
+    <li><a href="https://kylemath.github.io/webcamHR/" target="_blank">webcamHR</a> - Real-time heart rate detection from webcam using computer vision and signal processing in P5.js</li>
+    <li><a href="https://kylemath.github.io/cross_colour/" target="_blank">cross_colour</a> - Interactive demonstration of illusory colors created by overlaying crosshatch patterns on grayscale images</li>
+    <li><a href="https://kylemath.github.io/necker_move/" target="_blank">necker_move</a> - Animated Necker cube optical illusion with interactive controls for studying visual perception</li>
+    <li><a href="https://kylemath.github.io/hueforge-at-home/" target="_blank">hueforge-at-home</a> - JavaScript implementation of color mixing algorithms for multi-material 3D printing using P5.js</li>
+    <li><a href="https://kylemath.github.io/WhisperingPines/" target="_blank">WhisperingPines</a> - Webcam-responsive audiovisual art installation combining computer vision with generative audio</li>
+    <li><a href="https://kylemath.github.io/faceoff/" target="_blank">faceoff</a> - Interactive exploration of latent GAN space using brain signals for navigating generated face landscapes</li>
+    <li><a href="https://kylemath.github.io/Apparition/" target="_blank">Apparition</a> - Real-time video puppetry system using pix2pix neural networks trained on historical video footage</li>
+    <li><a href="https://juventus2013.netlify.app/" target="_blank">Juventus 2013 Boys</a> - Team website for youth soccer club featuring schedules, statistics, and team information</li>
 </ul>
 
 <hr>
