updated with long form writing section and first example

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ LinkedIn: <a href="https://www.linkedin.com/in/ky-mathewson-856279124/" target="
     <li><a href="#projects">Recent Projects</a></li>
     <li><a href="#contributor-projects">Contributor Projects</a></li>
     <li><a href="#web-development">Web Development & Interactive Projects</a></li>
+    <li><a href="#long-form-writing">Long Form Writing</a></li>
     <li><a href="#publications">Recent Publications</a></li>
     <li><a href="#news-mentions">In the News</a></li>
     <li><a href="#research">Research</a></li>
@@ -156,6 +157,14 @@ LinkedIn: <a href="https://www.linkedin.com/in/ky-mathewson-856279124/" target="
     <li><a href="https://kylemath.github.io/faceoff/" target="_blank">faceoff</a> - Interactive exploration of latent GAN space using brain signals for navigating generated face landscapes</li>
     <li><a href="https://kylemath.github.io/Apparition/" target="_blank">Apparition</a> - Real-time video puppetry system using pix2pix neural networks trained on historical video footage</li>
     <li><a href="https://juventus2013.netlify.app/" target="_blank">Juventus 2013 Boys</a> - Team website for youth soccer club featuring schedules, statistics, and team information</li>
+</ul>
+
+<hr>
+
+<h2 id="long-form-writing">Long Form Writing</h2>
+<p>Essays and extended analyses exploring the intersection of science, society, and innovation.</p>
+<ul>
+    <li><a href="exile-engine.html" target="_blank">The Exile Engine: How Society Manufactures Genius Through Outcasting</a> (2025) - An analysis of the exile-innovation pattern from Moses to Steve Mann, examining why society's 95% rejection rate for radical ideas isn't broken—it's the feature that prevents system collapse. <em>4,967 words</em></li>
 </ul>
 
 <hr>
