update order of homepage

--- a/index.html
+++ b/index.html
@@ -55,17 +55,66 @@ LinkedIn: <a href="https://www.linkedin.com/in/ky-mathewson-856279124/" target="
 
 <h2 id="navigation">Navigation</h2>
 <ul>
+    <li><a href="#about">About</a></li>
+    <li><a href="#research">Research</a></li>
+    <li><a href="#long-form-writing">Long Form Writing</a></li>
     <li><a href="#projects">Recent Projects</a></li>
     <li><a href="#contributor-projects">Contributor Projects</a></li>
     <li><a href="#web-development">Web Development & Interactive Projects</a></li>
-    <li><a href="#long-form-writing">Long Form Writing</a></li>
     <li><a href="#publications">Recent Publications</a></li>
     <li><a href="#news-mentions">In the News</a></li>
-    <li><a href="#research">Research</a></li>
     <li><a href="#teaching">Teaching</a></li>
-    <li><a href="#about">About</a></li>
+
     <li><a href="https://sites.psych.ualberta.ca/kylemathewson/" target="_blank">APPLab Website</a></li>
     <li><a href="https://apps.ualberta.ca/directory/person/kmathews" target="_blank">University Directory</a></li>
+</ul>
+
+<hr>
+<h2 id="about">About</h2>
+<p>I am an Associate Professor of Psychology in the Faculty of Science's Department of Psychology at the University of Alberta. I was previously a Postdoctoral Fellow at the Beckman Institute at the University of Illinois at Urbana-Champaign and in the Department of Psychology at the University of Alberta. I received my PhD in 2011 from the Brain and Cognition Division of the Department of Psychology at the University of Illinois in the Cognitive Neuroimaging Lab of Drs. Monica Fabiani and Gabriele Gratton, with the support of a Post Graduate Scholarship from the Natural Science and Engineering Research Council of Canada. I received my B.A. in Psychology (Honours; First in Graduating Class) from the University of Victoria in 2007, completing my honours thesis in the Learning and Cognitive Control Lab under the supervision of Dr. Clay Holroyd.</p>
+
+<h3>Academic Research and Leadership</h3>
+<p>As Director of the Attention Perception and Performance Lab (APPLab) in the Department of Psychology at the University of Alberta, I lead research in cognitive neuroscience focusing on visual awareness, attention, learning, and memory. Our lab uses cutting-edge approaches combining human behavioral studies, neuroimaging, and electrophysiological recording. We're particularly focused on developing portable, accessible brain-sensing technologies and studying attention in real-world environments. Our work spans from basic research on neural oscillations to applied projects in areas like stroke diagnosis and sports performance.</p>
+
+<h3>Industry and Consulting</h3>
+<p>Beyond academia, I engage in independent consulting work, applying neuroscience and cognitive psychology principles to real-world challenges. My expertise in portable brain-sensing technology and human performance optimization has led to collaborations with various industries and organizations.</p>
+
+<h3>Personal Life and Community Involvement</h3>
+<p>Outside of my academic work, I'm actively involved in the Edmonton community, particularly in youth sports development. I serve as a soccer coach for the Juventus Soccer Club, working with the <a href="https://juventus2013.netlify.app/" target="_blank">2013 Boys T3 team</a>. I'm also an active player myself in the <a href="https://edsa.org/" target="_blank">Edmonton and District Soccer Association</a>, combining my passion for sports with community engagement.</p>
+
+<p>I share my life with my wife, Dr. Claire Scavuzzo, who is also at the University of Alberta. Together, we balance our academic careers with family life and various projects. Our children are actively involved in technology and sports - my son is developing his coding skills (visible on his <a href="https://github.com/jackyscavuzzo" target="_blank">GitHub</a>) and shares his interests through his <a href="https://www.youtube.com/channel/UC6C2whs1A2Po3gICTFnazmw" target="_blank">YouTube channel</a>, while also playing soccer with the Juventus club.</p>
+
+<p>This combination of academic research, industry application, and community involvement allows me to pursue my goal of making neuroscience more accessible and applicable to everyday life, while maintaining a rich and balanced personal life.</p>
+
+<hr>
+
+
+<h2 id="research">Research: Pervasive Brain Sensing for Everyone</h2>
+<p><strong>A Systematic Vision: From Lab to Everyday Life</strong></p>
+<p>The Attention Perception and Performance Lab follows a strategic four-stage approach to democratize neuroscience through pervasive, accessible brain sensing technology. Our goal: develop robust, portable systems that can help everyone understand and optimize their cognitive performance in real-world environments.</p>
+
+<h3>Stage 1: Advanced Measurement Devices</h3>
+<p>We engineer portable, high-quality neural recording systems that work beyond traditional lab constraints. Our portable EEG platforms enable 3-minute stroke diagnosis, while projects like flexible neural interfaces and MRI-compatible epidermal electronics push toward seamless, comfortable brain monitoring. <em>Future directions:</em> Developing ultra-miniaturized, wireless neural dust and breathable electronic tattoos for continuous, imperceptible brain monitoring.</p>
+
+<h3>Stage 2: Accessible Software Ecosystems</h3>
+<p>We create open-source software infrastructure that makes brain recording as simple as using a smartphone. Tools like muse-js (Web Bluetooth EEG), EEGEdu (interactive brain playground), and comprehensive analysis libraries (DeepEEG, fooof, pyoptical) democratize access to neurotechnology. <em>Future directions:</em> Real-time AI-powered brain state decoding and personalized cognitive optimization recommendations through everyday devices.</p>
+
+<h3>Stage 3: Real-World Validation</h3>
+<p>We validate neuroscience findings in natural environments—measuring brain activity during cycling through traffic, skateboarding, basketball shooting (FreethrowEEG), and exploring how environmental factors modulate neural responses. This work reveals which lab findings translate to real life and which require revision. <em>Future directions:</em> Large-scale ecological studies using crowd-sourced brain data to understand cognitive performance across diverse populations and environments.</p>
+
+<h3>Stage 4: Translational Applications</h3>
+<p>We deploy validated technologies across four domains: <strong>Research</strong> (open-source tools, reproducible workflows), <strong>Education</strong> (interactive learning platforms, programming courses), <strong>Consumer</strong> (creative brain-art interfaces, physiological monitoring via webcamHR), and <strong>Clinical</strong> (emergency stroke assessment, post-stroke rehabilitation). Projects span from Indigenous language preservation (nehiyoMTB) to creative fabrication (voice2print, IllumiStack). <em>Future directions:</em> Personalized cognitive enhancement, predictive mental health monitoring, and brain-responsive smart environments.</p>
+
+<h3>Emerging Frontiers: AI-Enhanced Perceptual Engineering</h3>
+<p>Our newest work explores whether machines can understand and generate visual illusions (visual-illusions, cross_colour), opening pathways to AI-human cognitive collaboration. We're developing computational methods that combine multivariate pattern analysis with web technologies to create the next generation of brain-computer interfaces that enhance rather than replace human cognition.</p>
+
+<hr>
+
+<h2 id="long-form-writing">Long Form Writing</h2>
+<p>Essays and extended analyses exploring the intersection of science, society, and innovation.</p>
+<ul>
+    <li><a href="exile-engine.html" target="_blank">The Exile Engine: How Society Manufactures Genius Through Outcasting</a> (2025) - An analysis of the exile-innovation pattern from Moses to Steve Mann, examining why society's 95% rejection rate for radical ideas isn't broken—it's the feature that prevents system collapse. <em>4,967 words</em></li>
+    <li><a href="https://fungioergosum.netlify.app" target="_blank">Fungio Ergo Sum</a> - Interactive exploration of consciousness, identity, and existence through the lens of fungal networks and distributed cognition.</li>
 </ul>
 
 <hr>
@@ -157,14 +206,6 @@ LinkedIn: <a href="https://www.linkedin.com/in/ky-mathewson-856279124/" target="
     <li><a href="https://kylemath.github.io/faceoff/" target="_blank">faceoff</a> - Interactive exploration of latent GAN space using brain signals for navigating generated face landscapes</li>
     <li><a href="https://kylemath.github.io/Apparition/" target="_blank">Apparition</a> - Real-time video puppetry system using pix2pix neural networks trained on historical video footage</li>
     <li><a href="https://juventus2013.netlify.app/" target="_blank">Juventus 2013 Boys</a> - Team website for youth soccer club featuring schedules, statistics, and team information</li>
-</ul>
-
-<hr>
-
-<h2 id="long-form-writing">Long Form Writing</h2>
-<p>Essays and extended analyses exploring the intersection of science, society, and innovation.</p>
-<ul>
-    <li><a href="exile-engine.html" target="_blank">The Exile Engine: How Society Manufactures Genius Through Outcasting</a> (2025) - An analysis of the exile-innovation pattern from Moses to Steve Mann, examining why society's 95% rejection rate for radical ideas isn't broken—it's the feature that prevents system collapse. <em>4,967 words</em></li>
 </ul>
 
 <hr>
@@ -305,26 +346,6 @@ LinkedIn: <a href="https://www.linkedin.com/in/ky-mathewson-856279124/" target="
 
 <hr>
 
-<h2 id="research">Research: Pervasive Brain Sensing for Everyone</h2>
-<p><strong>A Systematic Vision: From Lab to Everyday Life</strong></p>
-<p>The Attention Perception and Performance Lab follows a strategic four-stage approach to democratize neuroscience through pervasive, accessible brain sensing technology. Our goal: develop robust, portable systems that can help everyone understand and optimize their cognitive performance in real-world environments.</p>
-
-<h3>Stage 1: Advanced Measurement Devices</h3>
-<p>We engineer portable, high-quality neural recording systems that work beyond traditional lab constraints. Our portable EEG platforms enable 3-minute stroke diagnosis, while projects like flexible neural interfaces and MRI-compatible epidermal electronics push toward seamless, comfortable brain monitoring. <em>Future directions:</em> Developing ultra-miniaturized, wireless neural dust and breathable electronic tattoos for continuous, imperceptible brain monitoring.</p>
-
-<h3>Stage 2: Accessible Software Ecosystems</h3>
-<p>We create open-source software infrastructure that makes brain recording as simple as using a smartphone. Tools like muse-js (Web Bluetooth EEG), EEGEdu (interactive brain playground), and comprehensive analysis libraries (DeepEEG, fooof, pyoptical) democratize access to neurotechnology. <em>Future directions:</em> Real-time AI-powered brain state decoding and personalized cognitive optimization recommendations through everyday devices.</p>
-
-<h3>Stage 3: Real-World Validation</h3>
-<p>We validate neuroscience findings in natural environments—measuring brain activity during cycling through traffic, skateboarding, basketball shooting (FreethrowEEG), and exploring how environmental factors modulate neural responses. This work reveals which lab findings translate to real life and which require revision. <em>Future directions:</em> Large-scale ecological studies using crowd-sourced brain data to understand cognitive performance across diverse populations and environments.</p>
-
-<h3>Stage 4: Translational Applications</h3>
-<p>We deploy validated technologies across four domains: <strong>Research</strong> (open-source tools, reproducible workflows), <strong>Education</strong> (interactive learning platforms, programming courses), <strong>Consumer</strong> (creative brain-art interfaces, physiological monitoring via webcamHR), and <strong>Clinical</strong> (emergency stroke assessment, post-stroke rehabilitation). Projects span from Indigenous language preservation (nehiyoMTB) to creative fabrication (voice2print, IllumiStack). <em>Future directions:</em> Personalized cognitive enhancement, predictive mental health monitoring, and brain-responsive smart environments.</p>
-
-<h3>Emerging Frontiers: AI-Enhanced Perceptual Engineering</h3>
-<p>Our newest work explores whether machines can understand and generate visual illusions (visual-illusions, cross_colour), opening pathways to AI-human cognitive collaboration. We're developing computational methods that combine multivariate pattern analysis with web technologies to create the next generation of brain-computer interfaces that enhance rather than replace human cognition.</p>
-
-<hr>
 
 <h2 id="teaching">Teaching</h2>
 <ul>
@@ -357,23 +378,7 @@ LinkedIn: <a href="https://www.linkedin.com/in/ky-mathewson-856279124/" target="
 
 <hr>
 
-<h2 id="about">About</h2>
-<p>I am an Associate Professor of Psychology in the Faculty of Science's Department of Psychology at the University of Alberta. I was previously a Postdoctoral Fellow at the Beckman Institute at the University of Illinois at Urbana-Champaign and in the Department of Psychology at the University of Alberta. I received my PhD in 2011 from the Brain and Cognition Division of the Department of Psychology at the University of Illinois in the Cognitive Neuroimaging Lab of Drs. Monica Fabiani and Gabriele Gratton, with the support of a Post Graduate Scholarship from the Natural Science and Engineering Research Council of Canada. I received my B.A. in Psychology (Honours; First in Graduating Class) from the University of Victoria in 2007, completing my honours thesis in the Learning and Cognitive Control Lab under the supervision of Dr. Clay Holroyd.</p>
 
-<h3>Academic Research and Leadership</h3>
-<p>As Director of the Attention Perception and Performance Lab (APPLab) in the Department of Psychology at the University of Alberta, I lead research in cognitive neuroscience focusing on visual awareness, attention, learning, and memory. Our lab uses cutting-edge approaches combining human behavioral studies, neuroimaging, and electrophysiological recording. We're particularly focused on developing portable, accessible brain-sensing technologies and studying attention in real-world environments. Our work spans from basic research on neural oscillations to applied projects in areas like stroke diagnosis and sports performance.</p>
-
-<h3>Industry and Consulting</h3>
-<p>Beyond academia, I engage in independent consulting work, applying neuroscience and cognitive psychology principles to real-world challenges. My expertise in portable brain-sensing technology and human performance optimization has led to collaborations with various industries and organizations.</p>
-
-<h3>Personal Life and Community Involvement</h3>
-<p>Outside of my academic work, I'm actively involved in the Edmonton community, particularly in youth sports development. I serve as a soccer coach for the Juventus Soccer Club, working with the <a href="https://juventus2013.netlify.app/" target="_blank">2013 Boys T3 team</a>. I'm also an active player myself in the <a href="https://edsa.org/" target="_blank">Edmonton and District Soccer Association</a>, combining my passion for sports with community engagement.</p>
-
-<p>I share my life with my wife, Dr. Claire Scavuzzo, who is also at the University of Alberta. Together, we balance our academic careers with family life and various projects. Our children are actively involved in technology and sports - my son is developing his coding skills (visible on his <a href="https://github.com/jackyscavuzzo" target="_blank">GitHub</a>) and shares his interests through his <a href="https://www.youtube.com/channel/UC6C2whs1A2Po3gICTFnazmw" target="_blank">YouTube channel</a>, while also playing soccer with the Juventus club.</p>
-
-<p>This combination of academic research, industry application, and community involvement allows me to pursue my goal of making neuroscience more accessible and applicable to everyday life, while maintaining a rich and balanced personal life.</p>
-
-<hr>
 
 <h2 id="experience">Work Experience</h2>
 
