--- a/index.html
+++ b/index.html
@@ -121,6 +121,22 @@ LinkedIn: <a href="https://www.linkedin.com/in/ky-mathewson-856279124/" target="
 
 <h2 id="projects">Recent Projects</h2>
 <ul>
+    <li><a href="https://github.com/kylemath/ClashRoyale" target="_blank">ClashRoyale</a> - GitHub repository</li>
+    <li><a href="https://github.com/kylemath/collisionDetectionForcefield" target="_blank">collisionDetectionForcefield</a> - GitHub repository</li>
+    <li><a href="https://github.com/kylemath/FractalViewerWebpage" target="_blank">FractalViewerWebpage</a> - GitHub repository</li>
+    <li><a href="https://github.com/kylemath/WordSelectionLLM" target="_blank">WordSelectionLLM</a> - GitHub repository</li>
+    <li><a href="https://github.com/kylemath/topologicalDataAnalysisBiology" target="_blank">topologicalDataAnalysisBiology</a> - GitHub repository</li>
+    <li><a href="https://github.com/kylemath/topographicModelsFromMapWebpage" target="_blank">topographicModelsFromMapWebpage</a> - GitHub repository</li>
+    <li><a href="https://github.com/kylemath/microphoneSpectroramWebpage" target="_blank">microphoneSpectroramWebpage</a> - GitHub repository</li>
+    <li><a href="https://github.com/kylemath/pickingTVWebpage" target="_blank">pickingTVWebpage</a> - GitHub repository</li>
+    <li><a href="https://github.com/kylemath/LinoleumSecretHistory" target="_blank">LinoleumSecretHistory</a> - GitHub repository</li>
+    <li><a href="https://github.com/kylemath/JaneStreetDwarkeshPuzzle" target="_blank">JaneStreetDwarkeshPuzzle</a> - GitHub repository</li>
+    <li><a href="https://github.com/kylemath/ConciousnessTheoryCompareWebpage" target="_blank">ConciousnessTheoryCompareWebpage</a> - GitHub repository</li>
+    <li><a href="https://github.com/kylemath/HistoricGlenoraMapWebpage" target="_blank">HistoricGlenoraMapWebpage</a> - GitHub repository</li>
+    <li><a href="https://github.com/kylemath/digitalClock" target="_blank">digitalClock</a> - 3d printed digital clock for esphome and homeassistant</li>
+    <li><a href="https://github.com/kylemath/cryptoMemeCoinMint" target="_blank">cryptoMemeCoinMint</a> - GitHub repository</li>
+    <li><a href="https://github.com/kylemath/CatalanQuadratic" target="_blank">CatalanQuadratic</a> - GitHub repository</li>
+    <li><a href="https://github.com/kylemath/BrainCraft" target="_blank">BrainCraft</a> - GitHub repository</li>
     <li><a href="https://github.com/kylemath/homePage" target="_blank">homePage</a> - Main homepage for kylemathewson.com and helper scripts</li>
     <li><a href="https://github.com/kylemath/3dprint" target="_blank">3dprint</a> - set of .stl files and other 3d files I find useful, no credit claimed</li>
     <li><a href="https://github.com/kylemath/artOfSoccerWarPlanning" target="_blank">artOfSoccerWarPlanning</a> - GitHub repository</li>
@@ -129,7 +145,6 @@ LinkedIn: <a href="https://www.linkedin.com/in/ky-mathewson-856279124/" target="
     <li><a href="https://github.com/kylemath/nehiyoMTB" target="_blank">nehiyoMTB</a> - Nehiyawewin trail signs for Edmonton</li>
     <li><a href="https://github.com/kylemath/IllumiStack" target="_blank">IllumiStack</a> - 3d Printing with Stacked colour layers web app</li>
     <li><a href="https://github.com/kylemath/voice2print" target="_blank">voice2print</a> - From my voice to plastic</li>
-    <li><a href="https://github.com/kylemath/digitalClock" target="_blank">digitalClock</a> - 3d printed digital clock for esphome and homeassistant</li>
     <li><a href="https://github.com/kylemath/artOfSoccerWar" target="_blank">artOfSoccerWar</a> - GitHub repository</li>
     <li><a href="https://github.com/kylemath/FreethrowEEG" target="_blank">FreethrowEEG</a> - Recording EEG during freethrow basketball shooting</li>
     <li><a href="https://github.com/kylemath/reConstruction" target="_blank">reConstruction</a> - GitHub repository</li>
@@ -168,6 +183,7 @@ LinkedIn: <a href="https://www.linkedin.com/in/ky-mathewson-856279124/" target="
     <li><a href="https://github.com/kylemath/AudienceEEG" target="_blank">AudienceEEG</a> - GitHub repository</li>
     <li><a href="https://github.com/kylemath/FitnessMemory" target="_blank">FitnessMemory</a> - GitHub repository</li>
     <li><a href="https://github.com/kylemath/DuckBunny2" target="_blank">DuckBunny2</a> - Analysis and results for duckbunny2 project</li>
+    <li><a href="https://github.com/kylemath/powerLawSoccerAnalysisPage" target="_blank">powerLawSoccerAnalysisPage</a> - GitHub repository</li>
 </ul>
 
 <hr>
